@@ -30,4 +30,5 @@ from _urlparse import *
 from _plot import *
 from _qps import *
 from _sample import *
+from _sumstat import *
 from _serve import *
